# gem

./: Cargo.toml  README.md  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/name/: Cargo.toml
pallets/name/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_run.sh
