[package]
authors = ['DEADBLACKCLOVER <deadblackclover@protonmail.com>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://gemchain.tech'
license = "GPL-3.0"
name = 'gem'
repository = 'https://github.com/gemblockchain/gem'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = []
runtime-benchmarks = ['gem-runtime/runtime-benchmarks']

[[bin]]
name = 'gem'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'

gem-runtime = {path = '../runtime', version = '1.0.0'}

pallet-transaction-payment-rpc = '3.0.0'

sc-basic-authorship = '0.9.0'
sc-cli = {features = ['wasmtime'], version = '0.9.0'}
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = {features = ['wasmtime'], version = '0.9.0'}
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = {features = ['wasmtime'], version = '0.9.0'}
sc-telemetry = '3.0.0'
sc-transaction-pool = '3.0.0'

sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-timestamp = '3.0.0'
sp-transaction-pool = '3.0.0'

substrate-frame-rpc-system = '3.0.0'

[build-dependencies]
substrate-build-script-utils = '3.0.0'
