[package]
authors = ['DEADBLACKCLOVER <deadblackclover@protonmail.com>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://gemchain.tech'
license = "GPL-3.0"
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/gemblockchain/gem'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
serde = {version = '1.0.119'}
sp-core = {default-features = false, version = '3.0.0'}
sp-io = {default-features = false, version = '3.0.0'}
sp-runtime = {default-features = false, version = '3.0.0'}

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
]
